--- a/EJ4/src/main/resources/application.properties
+++ b/EJ4/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://192.168.1.74:3306/Investigador
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
 spring.datasource.username=tarjona
-spring.datasource.password=Mek15Mor@
+spring.datasource.password=
 
 
 #Imprime en tu consola las instrucciones hechas en tu base de datos.
